A little cleanup and conversion of SamLocusIterator to use ArrayLists instead of LinkedLists for about 30% speedup.